@@ -380,6 +380,10 @@ void print_chat_member(struct yahoo_chat_member *ycm) {
 	printf("  Location: %s", ycm->location);
 }
 
+void ext_yahoo_chat_cat_xml(int id, char *xml) {
+	print_message(("%s", xml));
+}
+
 void ext_yahoo_chat_join(int id, char *room, char * topic, YList *members)
 {
 	print_message(("You have joined the chatroom %s with topic %s", room, topic));
@@ -1448,6 +1452,7 @@ static void register_callbacks()
 	yc.ext_yahoo_conf_userjoin = ext_yahoo_conf_userjoin;
 	yc.ext_yahoo_conf_userleave = ext_yahoo_conf_userleave;
 	yc.ext_yahoo_conf_message = ext_yahoo_conf_message;
+	yc.ext_yahoo_chat_cat_xml = ext_yahoo_chat_cat_xml;
 	yc.ext_yahoo_chat_join = ext_yahoo_chat_join;
 	yc.ext_yahoo_chat_userjoin = ext_yahoo_chat_userjoin;
 	yc.ext_yahoo_chat_userleave = ext_yahoo_chat_userleave;
